fullSandbox11072023/force-app/main/default/objects/BW_Billing_Data__c/BW_Billing_Data__c.object-meta.xml
<CustomObject>
    <label>BW Billing Data</label>
    <nameField>
        <label>BW Billing Data</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BW Billing Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>