fullSandbox11072023/force-app/main/default/objects/BW_Billing_Data__c/fields/Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number__c</fullName>
    <externalId>true</externalId>
    <label>Sales Order Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>