fullSandbox11072023/force-app/main/default/objects/BW_Billing_Data__c/fields/Sales_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Territory_Name__c</fullName>
    <label>Sales Territory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>